Fix App margin and add to ChatTypeBar button

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 .App {
   text-align: center;
+  padding: 1em 2em;
+  margin: 0 35%;
 }
 
+@media (max-width: 768px) {
+  .App {
+    margin: 0;
+  }
+}
